--- a/l3kernel/l3sort.dtx
+++ b/l3kernel/l3sort.dtx
@@ -1078,24 +1078,10 @@
 % \begin{macro}[deprecated = 2018-12-31]{\sort_ordered:, \sort_reversed:}
 %   These functions were renamed for consistency.
 %    \begin{macrocode}
-\cs_new_protected:Npn \sort_ordered:
-  {
-    \__msg_kernel_warning:nnxxx { kernel } { deprecated-command }
-      { 2018-12-31 }
-      { \token_to_str:N \sort_ordered: }
-      { \token_to_str:N \sort_return_same: }
-    \cs_gset_eq:NN \sort_ordered: \sort_return_same:
-    \sort_return_same:
-  }
-\cs_new_protected:Npn \sort_reversed:
-  {
-    \__msg_kernel_warning:nnxxx { kernel } { deprecated-command }
-      { 2018-12-31 }
-      { \token_to_str:N \sort_reversed: }
-      { \token_to_str:N \sort_return_swapped: }
-    \cs_gset_eq:NN \sort_reversed: \sort_return_swapped:
-    \sort_return_swapped:
-  }
+\__debug_deprecation:nnNNpn { 2018-12-31 } { \sort_return_same: }
+\cs_new_protected:Npn \sort_ordered: { \sort_return_same: }
+\__debug_deprecation:nnNNpn { 2018-12-31 } { \sort_return_swapped: }
+\cs_new_protected:Npn \sort_reversed: { \sort_return_swapped: }
 %    \end{macrocode}
 % \end{macro}
 %
