Make all existence checks subdued to check-declarations option
Possibly controversial: now by default \cs_generate_variant:Nn does not
check the base form is defined (like \tl_put_right:cn does not check
its first argument is defined).  I've left in the non-existence checks
done by \cs_new:Npn etc. but maybe these should be disabled by default?

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -92,9 +92,9 @@
 %   \end{syntax}
 %   Turn on and off within a group the code that checks that all
 %   \pkg{expl3} variables used were previously declared, as done
-%   globally by the \texttt{check-declarations} option.  This can only
-%   be used if \pkg{expl3} is loaded with one of the options
-%   \texttt{check-declarations}, \texttt{log-functions}, or
+%   globally by the \texttt{check-declarations} option.  These functions
+%   can only be used in \LaTeXe{} package mode loaded with one of the
+%   options \texttt{check-declarations}, \texttt{log-functions}, or
 %   \texttt{enable-debug}.
 % \end{function}
 %
@@ -108,7 +108,10 @@
 %   soon-to-be-deprecated commands to produce errors.  This allows
 %   testing code even if it relies on other packages: load all other
 %   packages, call \cs{debug_deprecation_on:}, and load the code that
-%   one is interested in testing.
+%   one is interested in testing.  These functions can only be used in
+%   \LaTeXe{} package mode loaded with one of the options
+%   \texttt{check-declarations}, \texttt{log-functions}, or
+%   \texttt{enable-debug}.
 % \end{function}
 %
 % \begin{function}[added = 2017-07-14]
@@ -119,9 +122,9 @@
 %   \end{syntax}
 %   Turn on and off within a group the code that logs function
 %   definitions, as done globally by the \texttt{log-functions} option.
-%   This can only be used if \pkg{expl3} is loaded with one of the
-%   options \texttt{check-declarations}, \texttt{log-functions}, or
-%   \texttt{enable-debug}.
+%   These functions can only be used in \LaTeXe{} package mode loaded
+%   with one of the options \texttt{check-declarations},
+%   \texttt{log-functions}, or \texttt{enable-debug}.
 % \end{function}
 %
 % \begin{function}[added = 2017-07-04]{\mode_leave_vertical:}
@@ -1466,7 +1469,6 @@
 %   Shifting the corners and poles of a coffin means subtracting the
 %   appropriate values from the $x$- and $y$-components. For
 %   the poles, this means that the direction vector is unchanged.
-%   When debugging wrap expressions in parentheses.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_shift_corner:Nnnn #1#2#3#4
   {
