--- a/l3kernel/l3flag.dtx
+++ b/l3kernel/l3flag.dtx
@@ -197,7 +197,7 @@
 %   function defined by \cs{flag_new:n}.
 %    \begin{macrocode}
 \__debug_patch:nnNw
-  { \exp_args:Nc \__chk_if_exist_var:N { flag~#1 } } { }
+  { \exp_args:Nc \__debug_chk_var_exist:N { flag~#1 } } { }
 \cs_new_protected:Npn \flag_clear:n #1 { \@@_clear:wn 0 ; {#1} }
 \cs_new_protected:Npn \@@_clear:wn #1 ; #2
   {
@@ -240,7 +240,7 @@
 % \subsection{Expandable flag commands}
 %
 % \begin{macro}[EXP,aux]{\@@_chk_exist:n}
-%   Analogue of \cs{__chk_if_exist_var:N} for flags, and with an
+%   Analogue of \cs{__debug_chk_var_exist:N} for flags, and with an
 %   expandable error.  We need to add checks by hand because flags are
 %   not implemented in terms of other variables.  Not all functions need
 %   to be patched since some are defined in terms of others.
