--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -1160,14 +1160,14 @@
 \tex_ifodd:D \l@expl@enable@debug@bool
   \cs_new_protected:Npn \tl_set_eq:NN #1#2
     {
-      \__chk_if_exist_var:N #1
-      \__chk_if_exist_var:N #2
+      \__debug_chk_var_exist:N #1
+      \__debug_chk_var_exist:N #2
       \cs_set_eq:NN #1 #2
     }
   \cs_new_protected:Npn \tl_gset_eq:NN #1#2
     {
-      \__chk_if_exist_var:N #1
-      \__chk_if_exist_var:N #2
+      \__debug_chk_var_exist:N #1
+      \__debug_chk_var_exist:N #2
       \cs_gset_eq:NN #1 #2
     }
 \else:
@@ -1188,18 +1188,18 @@
 %    \begin{macrocode}
 \__debug_patch:nnNw
   {
-    \__chk_if_exist_var:N #1
-    \__chk_if_exist_var:N #2
-    \__chk_if_exist_var:N #3
+    \__debug_chk_var_exist:N #1
+    \__debug_chk_var_exist:N #2
+    \__debug_chk_var_exist:N #3
   }
   { }
 \cs_new_protected:Npn \tl_concat:NNN #1#2#3
   { \tl_set:Nx #1 { \exp_not:o {#2} \exp_not:o {#3} } }
 \__debug_patch:nnNw
   {
-    \__chk_if_exist_var:N #1
-    \__chk_if_exist_var:N #2
-    \__chk_if_exist_var:N #3
+    \__debug_chk_var_exist:N #1
+    \__debug_chk_var_exist:N #2
+    \__debug_chk_var_exist:N #3
   }
   { }
 \cs_new_protected:Npn \tl_gconcat:NNN #1#2#3
@@ -1255,22 +1255,22 @@
 %   prefixed by a call to \cs{__debug_patch:nnNw} which adds an
 %   existence check to the definition.
 %    \begin{macrocode}
-\__debug_patch:nnNw { \__chk_if_exist_var:N #1 } { }
+\__debug_patch:nnNw { \__debug_chk_var_exist:N #1 } { }
 \cs_new_protected:Npn \tl_set:Nn #1#2
   { \cs_set_nopar:Npx #1 { \exp_not:n {#2} } }
-\__debug_patch:nnNw { \__chk_if_exist_var:N #1 } { }
+\__debug_patch:nnNw { \__debug_chk_var_exist:N #1 } { }
 \cs_new_protected:Npn \tl_set:No #1#2
   { \cs_set_nopar:Npx #1 { \exp_not:o {#2} } }
-\__debug_patch:nnNw { \__chk_if_exist_var:N #1 } { }
+\__debug_patch:nnNw { \__debug_chk_var_exist:N #1 } { }
 \cs_new_protected:Npn \tl_set:Nx #1#2
   { \cs_set_nopar:Npx #1 {#2} }
-\__debug_patch:nnNw { \__chk_if_exist_var:N #1 } { }
+\__debug_patch:nnNw { \__debug_chk_var_exist:N #1 } { }
 \cs_new_protected:Npn \tl_gset:Nn #1#2
   { \cs_gset_nopar:Npx #1 { \exp_not:n {#2} } }
-\__debug_patch:nnNw { \__chk_if_exist_var:N #1 } { }
+\__debug_patch:nnNw { \__debug_chk_var_exist:N #1 } { }
 \cs_new_protected:Npn \tl_gset:No #1#2
   { \cs_gset_nopar:Npx #1 { \exp_not:o {#2} } }
-\__debug_patch:nnNw { \__chk_if_exist_var:N #1 } { }
+\__debug_patch:nnNw { \__debug_chk_var_exist:N #1 } { }
 \cs_new_protected:Npn \tl_gset:Nx #1#2
   { \cs_gset_nopar:Npx #1 {#2} }
 \cs_generate_variant:Nn \tl_set:Nn  {         NV , Nv , Nf }
@@ -1295,28 +1295,28 @@
 %   }
 % Adding to the left is done directly to gain a little performance.
 %    \begin{macrocode}
-\__debug_patch:nnNw { \__chk_if_exist_var:N #1 } { }
+\__debug_patch:nnNw { \__debug_chk_var_exist:N #1 } { }
 \cs_new_protected:Npn \tl_put_left:Nn #1#2
   { \cs_set_nopar:Npx #1 { \exp_not:n {#2} \exp_not:o #1 } }
-\__debug_patch:nnNw { \__chk_if_exist_var:N #1 } { }
+\__debug_patch:nnNw { \__debug_chk_var_exist:N #1 } { }
 \cs_new_protected:Npn \tl_put_left:NV #1#2
   { \cs_set_nopar:Npx #1 { \exp_not:V #2 \exp_not:o #1 } }
-\__debug_patch:nnNw { \__chk_if_exist_var:N #1 } { }
+\__debug_patch:nnNw { \__debug_chk_var_exist:N #1 } { }
 \cs_new_protected:Npn \tl_put_left:No #1#2
   { \cs_set_nopar:Npx #1 { \exp_not:o {#2} \exp_not:o #1 } }
-\__debug_patch:nnNw { \__chk_if_exist_var:N #1 } { }
+\__debug_patch:nnNw { \__debug_chk_var_exist:N #1 } { }
 \cs_new_protected:Npn \tl_put_left:Nx #1#2
   { \cs_set_nopar:Npx #1 { #2 \exp_not:o #1 } }
-\__debug_patch:nnNw { \__chk_if_exist_var:N #1 } { }
+\__debug_patch:nnNw { \__debug_chk_var_exist:N #1 } { }
 \cs_new_protected:Npn \tl_gput_left:Nn #1#2
   { \cs_gset_nopar:Npx #1 { \exp_not:n {#2} \exp_not:o #1 } }
-\__debug_patch:nnNw { \__chk_if_exist_var:N #1 } { }
+\__debug_patch:nnNw { \__debug_chk_var_exist:N #1 } { }
 \cs_new_protected:Npn \tl_gput_left:NV #1#2
   { \cs_gset_nopar:Npx #1 { \exp_not:V #2 \exp_not:o #1 } }
-\__debug_patch:nnNw { \__chk_if_exist_var:N #1 } { }
+\__debug_patch:nnNw { \__debug_chk_var_exist:N #1 } { }
 \cs_new_protected:Npn \tl_gput_left:No #1#2
   { \cs_gset_nopar:Npx #1 { \exp_not:o {#2} \exp_not:o #1 } }
-\__debug_patch:nnNw { \__chk_if_exist_var:N #1 } { }
+\__debug_patch:nnNw { \__debug_chk_var_exist:N #1 } { }
 \cs_new_protected:Npn \tl_gput_left:Nx #1#2
   { \cs_gset_nopar:Npx #1 { #2 \exp_not:o {#1} } }
 \cs_generate_variant:Nn \tl_put_left:Nn  { c }
@@ -1345,28 +1345,28 @@
 %   }
 % The same on the right.
 %    \begin{macrocode}
-\__debug_patch:nnNw { \__chk_if_exist_var:N #1 } { }
+\__debug_patch:nnNw { \__debug_chk_var_exist:N #1 } { }
 \cs_new_protected:Npn \tl_put_right:Nn #1#2
   { \cs_set_nopar:Npx #1 { \exp_not:o #1 \exp_not:n {#2} } }
-\__debug_patch:nnNw { \__chk_if_exist_var:N #1 } { }
+\__debug_patch:nnNw { \__debug_chk_var_exist:N #1 } { }
 \cs_new_protected:Npn \tl_put_right:NV #1#2
   { \cs_set_nopar:Npx #1 { \exp_not:o #1 \exp_not:V #2 } }
-\__debug_patch:nnNw { \__chk_if_exist_var:N #1 } { }
+\__debug_patch:nnNw { \__debug_chk_var_exist:N #1 } { }
 \cs_new_protected:Npn \tl_put_right:No #1#2
   { \cs_set_nopar:Npx #1 { \exp_not:o #1 \exp_not:o {#2} } }
-\__debug_patch:nnNw { \__chk_if_exist_var:N #1 } { }
+\__debug_patch:nnNw { \__debug_chk_var_exist:N #1 } { }
 \cs_new_protected:Npn \tl_put_right:Nx #1#2
   { \cs_set_nopar:Npx #1 { \exp_not:o #1 #2 } }
-\__debug_patch:nnNw { \__chk_if_exist_var:N #1 } { }
+\__debug_patch:nnNw { \__debug_chk_var_exist:N #1 } { }
 \cs_new_protected:Npn \tl_gput_right:Nn #1#2
   { \cs_gset_nopar:Npx #1 { \exp_not:o #1 \exp_not:n {#2} } }
-\__debug_patch:nnNw { \__chk_if_exist_var:N #1 } { }
+\__debug_patch:nnNw { \__debug_chk_var_exist:N #1 } { }
 \cs_new_protected:Npn \tl_gput_right:NV #1#2
   { \cs_gset_nopar:Npx #1 { \exp_not:o #1 \exp_not:V #2 } }
-\__debug_patch:nnNw { \__chk_if_exist_var:N #1 } { }
+\__debug_patch:nnNw { \__debug_chk_var_exist:N #1 } { }
 \cs_new_protected:Npn \tl_gput_right:No #1#2
   { \cs_gset_nopar:Npx #1 { \exp_not:o #1 \exp_not:o {#2} } }
-\__debug_patch:nnNw { \__chk_if_exist_var:N #1 } { }
+\__debug_patch:nnNw { \__debug_chk_var_exist:N #1 } { }
 \cs_new_protected:Npn \tl_gput_right:Nx #1#2
   { \cs_gset_nopar:Npx #1 { \exp_not:o {#1} #2 } }
 \cs_generate_variant:Nn \tl_put_right:Nn  { c }
