Use different functions to patch definitions of conditionals
That removes the need to test things in the patching code.
Also give the sensible signature to patching functions.

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1038,7 +1038,7 @@
 %   Trimming from the left- and right-hand edges of the box is easy: kern the
 %   appropriate parts off each side.
 %    \begin{macrocode}
-\__debug_patch_args:nNw { {#1} { (#2) } {#3} { (#4) } {#5} }
+\__debug_patch_args:nNNpn { {#1} { (#2) } {#3} { (#4) } {#5} }
 \cs_new_protected:Npn \box_trim:Nnnnn #1#2#3#4#5
   {
     \hbox_set:Nn \l_@@_internal_box
@@ -1105,7 +1105,7 @@
 %   dimensions. As a result, there are some things to watch out for in the
 %   vertical direction.
 %    \begin{macrocode}
-\__debug_patch_args:nNw { {#1} { (#2) } {#3} { (#4) } {#5} }
+\__debug_patch_args:nNNpn { {#1} { (#2) } {#3} { (#4) } {#5} }
 \cs_new_protected:Npn \box_viewport:Nnnnn #1#2#3#4#5
   {
     \hbox_set:Nn \l_@@_internal_box
@@ -1804,7 +1804,7 @@
 %    \begin{macrocode}
 \cs_if_exist:NTF \pdftex_uniformdeviate:D
   {
-    \__debug_patch_args:nNw { { (#1) } { (#2) } }
+    \__debug_patch_args:nNNpn { { (#1) } { (#2) } }
     \cs_new:Npn \int_rand:nn #1#2
       {
         \exp_after:wN \@@_rand:ww
@@ -2179,7 +2179,7 @@
 % \begin{macro}{\sys_gset_rand_seed:n}
 %   The primitive always assigns the seed globally.
 %    \begin{macrocode}
-\__debug_patch_args:nNw { { (#1) } }
+\__debug_patch_args:nNNpn { { (#1) } }
 \cs_new_protected:Npn \sys_gset_rand_seed:n #1
   { \pdftex_setrandomseed:D \__int_eval:w #1 \__int_eval_end: }
 %    \end{macrocode}
