--- a/l3kernel/l3flag.dtx
+++ b/l3kernel/l3flag.dtx
@@ -196,7 +196,7 @@
 %   When the option \texttt{check-declarations} is used, check for the
 %   function defined by \cs{flag_new:n}.
 %    \begin{macrocode}
-\__debug_patch:nnNw
+\__debug_patch:nnNNpn
   { \exp_args:Nc \__debug_chk_var_exist:N { flag~#1 } } { }
 \cs_new_protected:Npn \flag_clear:n #1 { \@@_clear:wn 0 ; {#1} }
 \cs_new_protected:Npn \@@_clear:wn #1 ; #2
@@ -275,7 +275,7 @@
 % \begin{macro}[EXP, pTF]{\flag_if_raised:n}
 %   Test if the flag has a non-zero height, by checking the |0| control sequence.
 %    \begin{macrocode}
-\__debug_patch:nnNw { \@@_chk_exist:n {#1} } { }
+\__debug_patch_conditional:nNNpnn { \@@_chk_exist:n {#1} }
 \prg_new_conditional:Npnn \flag_if_raised:n #1 { p , T , F , TF }
   {
     \if_cs_exist:w flag~#1~0 \cs_end:
@@ -292,7 +292,7 @@
 %   Extract the value of the flag by going through all of the
 %   control sequences starting from |0|.
 %    \begin{macrocode}
-\__debug_patch:nnNw { \@@_chk_exist:n {#1} } { }
+\__debug_patch:nnNNpn { \@@_chk_exist:n {#1} } { }
 \cs_new:Npn \flag_height:n #1 { \@@_height_loop:wn 0; {#1} }
 \cs_new:Npn \@@_height_loop:wn #1 ; #2
   {
