--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1514,7 +1514,7 @@
 %   Setting the code for a key first logs if appropriate that we are
 %   defining a new key, then saves the code.
 %    \begin{macrocode}
-\__debug_patch:nnNw
+\__debug_patch:nnNNpn
   {
     \cs_if_exist:cF { \c_@@_code_root_tl #1 }
       { \__debug_log:x { Defining~key~#1~\msg_line_context: } }
