--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1465,7 +1465,7 @@
       }
     \cs_set_protected:Npn \box_rotate:Nn #1#2
       { \hbox_set:Nn #1 { \rotatebox {#2} { \box_use:N #1 } } }
-    \__debug_patch_args:nNw { {#1} { (#2) } { (#3) } }
+    \__debug_patch_args:nNNpn { {#1} { (#2) } { (#3) } }
     \cs_set_protected:Npn \box_resize_to_wd_and_ht_plus_dp:Nnn #1#2#3
       {
         \hbox_set:Nn #1
@@ -1476,7 +1476,7 @@
               { \box_use:N #1 }
           }
       }
-    \__debug_patch_args:nNw { {#1} { (#2) } }
+    \__debug_patch_args:nNNpn { {#1} { (#2) } }
     \cs_set_protected:Npn \box_resize_to_ht_plus_dp:Nn #1#2
       {
         \hbox_set:Nn #1
@@ -1485,7 +1485,7 @@
               { \box_use:N #1 }
           }
       }
-    \__debug_patch_args:nNw { {#1} { (#2) } }
+    \__debug_patch_args:nNNpn { {#1} { (#2) } }
     \cs_set_protected:Npn \box_resize_to_wd:Nn #1#2
       {
         \hbox_set:Nn #1
