--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -1476,7 +1476,7 @@
 %   iterate through the comma list of variant argument specifiers, which
 %   we first convert to a string: the reason is explained later.
 %    \begin{macrocode}
-\__debug_patch:nnNw { \__debug_chk_cs_exist:N #1 } { }
+\__debug_patch:nnNNpn { \__debug_chk_cs_exist:N #1 } { }
 \cs_new_protected:Npn \cs_generate_variant:Nn #1#2
   {
     \@@_generate_variant:N #1
@@ -1788,7 +1788,7 @@
 %   \cs{cs_new_protected:Npx}.  Then define the variant by
 %   combining the |\exp_args:N #3| variant and the base function.
 %    \begin{macrocode}
-\__debug_patch:nnNw
+\__debug_patch:nnNNpn
   {
     \cs_if_free:NF #4
       {
