--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1010,7 +1010,7 @@
 %   or directly in the input stream.
 %   When debugging, use parentheses to catch early termination.
 %    \begin{macrocode}
-\__debug_patch_args:nNw { { (#1) } }
+\__debug_patch_args:nNNpn { { (#1) } }
 \cs_new:Npn \int_eval:n #1
   { \@@_value:w \@@_eval:w #1 \@@_eval_end: }
 %    \end{macrocode}
@@ -1028,7 +1028,7 @@
 %   evaluation.  The absolute value is obtained by removing a leading
 %   sign if any.  All three functions expand in two steps.
 %    \begin{macrocode}
-\__debug_patch_args:nNw { { (#1) } }
+\__debug_patch_args:nNNpn { { (#1) } }
 \cs_new:Npn \int_abs:n #1
   {
     \@@_value:w \exp_after:wN \@@_abs:N
@@ -1037,7 +1037,7 @@
   }
 \cs_new:Npn \@@_abs:N #1
   { \if_meaning:w - #1 \else: \exp_after:wN #1 \fi: }
-\__debug_patch_args:nNw { { (#1) } { (#2) } }
+\__debug_patch_args:nNNpn { { (#1) } { (#2) } }
 \cs_set:Npn \int_max:nn #1#2
   {
     \@@_value:w \exp_after:wN \@@_maxmin:wwN
@@ -1046,7 +1046,7 @@
       >
     \exp_stop_f:
   }
-\__debug_patch_args:nNw { { (#1) } { (#2) } }
+\__debug_patch_args:nNNpn { { (#1) } { (#2) } }
 \cs_set:Npn \int_min:nn #1#2
   {
     \@@_value:w \exp_after:wN \@@_maxmin:wwN
@@ -1091,7 +1091,7 @@
 %   truncating behaviour that we want. The details are thanks to Heiko
 %   Oberdiek: getting things right in all cases is not so easy.
 %    \begin{macrocode}
-\__debug_patch_args:nNw { { (#1) } { (#2) } }
+\__debug_patch_args:nNNpn { { (#1) } { (#2) } }
 \cs_new:Npn \int_div_truncate:nn #1#2
   {
     \@@_value:w \@@_eval:w
@@ -1121,7 +1121,7 @@
 %    \end{macrocode}
 %   Finally there's the modulus operation.
 %    \begin{macrocode}
-\__debug_patch_args:nNw { { (#1) } { (#2) } }
+\__debug_patch_args:nNNpn { { (#1) } { (#2) } }
 \cs_new:Npn \int_mod:nn #1#2
   {
     \@@_value:w \@@_eval:w \exp_after:wN \@@_mod:ww
@@ -1274,10 +1274,10 @@
 % \UnitTested
 %    Adding and subtracting to and from a counter \ldots
 %    \begin{macrocode}
-\__debug_patch_args:nNw { {#1} { (#2) } }
+\__debug_patch_args:nNNpn { {#1} { (#2) } }
 \cs_new_protected:Npn \int_add:Nn #1#2
   { \tex_advance:D #1 by \@@_eval:w #2 \@@_eval_end: }
-\__debug_patch_args:nNw { {#1} { (#2) } }
+\__debug_patch_args:nNNpn { {#1} { (#2) } }
 \cs_new_protected:Npn \int_sub:Nn #1#2
   { \tex_advance:D #1 by - \@@_eval:w #2 \@@_eval_end: }
 \cs_new_protected:Npn \int_gadd:Nn
@@ -1331,7 +1331,7 @@
 %   if they are not defined. Thus there is no need for the checking
 %   code seen with token list variables.
 %    \begin{macrocode}
-\__debug_patch_args:nNw { {#1} { (#2) } }
+\__debug_patch_args:nNNpn { {#1} { (#2) } }
 \cs_new_protected:Npn \int_set:Nn #1#2
   { #1 ~ \@@_eval:w #2 \@@_eval_end: }
 \cs_new_protected:Npn \int_gset:Nn { \tex_global:D \int_set:Nn }
@@ -1536,7 +1536,7 @@
 % \UnitTested
 % More efficient but less natural in typing.
 %    \begin{macrocode}
-\__debug_patch_args:nNw { { (#1) \@@_eval_end: } {#2} { (#3) } }
+\__debug_patch_conditional_args:nNNpnn { { (#1) \@@_eval_end: } {#2} { (#3) } }
 \prg_new_conditional:Npnn \int_compare:nNn #1#2#3 { p , T , F , TF }
   {
     \if_int_compare:w \@@_eval:w #1 #2 \@@_eval:w #3 \@@_eval_end:
@@ -1595,7 +1595,7 @@
 % \UnitTested
 %   A predicate function.
 %    \begin{macrocode}
-\__debug_patch_args:nNw { { (#1) } }
+\__debug_patch_conditional_args:nNNpnn { { (#1) } }
 \prg_new_conditional:Npnn \int_if_odd:n #1 { p , T , F , TF}
   {
     \if_int_odd:w \@@_eval:w #1 \@@_eval_end:
@@ -1604,7 +1604,7 @@
       \prg_return_false:
     \fi:
   }
-\__debug_patch_args:nNw { { (#1) } }
+\__debug_patch_conditional_args:nNNpnn { { (#1) } }
 \prg_new_conditional:Npnn \int_if_even:n #1 { p , T , F , TF}
   {
     \if_int_odd:w \@@_eval:w #1 \@@_eval_end:
@@ -1720,7 +1720,7 @@
 %   step size of zero before checking the sign, but we optimize for the
 %   most frequent case (positive step).
 %    \begin{macrocode}
-\__debug_patch_args:nNw { { (#1) } { (#2) } { (#3) } }
+\__debug_patch_args:nNNpn { { (#1) } { (#2) } { (#3) } }
 \cs_new:Npn \int_step_function:nnnN #1#2#3
   {
     \exp_after:wN \@@_step:wwwN
