--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -2146,14 +2146,18 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 %
 % \begin{macro}[aux]{\@@_date_set:Nn}
-%   Minimal check that the date is not given in the YYYY/MM/DD format.
-%   Eventually we should check the input more carefully.
+%   Normalize the date into the format \texttt{YYYY-MM-DD}; more
+%   precisely month and day are allowed to be single digits.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_date_set:Nn #1#2
   {
-    \tl_if_in:nnT {#2} { / }
-      { \msg_error:nnn { l3doc } { date-format } {#2} }
     \tl_set:Nn #1 {#2}
+    \regex_replace_once:nnNF
+      { \A(\d\d\d\d)[-/](\d\d?)[-/](\d\d?)\Z } { \1-\2-\3 } #1
+      {
+        \msg_error:nnn { l3doc } { date-format } {#2}
+        \tl_set:Nn #1 { 1970-01-01 }
+      }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -2167,10 +2171,13 @@ and all files in that bundle must be distributed together.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_deprecated_on:n #1
   {
-    \@@_date_compare:nNnT {#1} < { \tex_year:D - \tex_month:D - \tex_day:D }
+    \@@_date_set:Nn \l_@@_tmpa_tl {#1}
+    \exp_args:No \@@_date_compare:nNnT
+      { \l_@@_tmpa_tl } < { \tex_year:D - \tex_month:D - \tex_day:D }
       {
         \msg_error:nnxx { l3doc } { deprecated-function }
-          { \tl_to_str:N \l_@@_macro_argument_tl } {#1}
+          { \tl_to_str:N \l_@@_macro_argument_tl }
+          { \l_@@_tmpa_tl }
       }
     \bool_set_true:N \l_@@_macro_internal_bool
   }
