--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -2252,31 +2252,36 @@ and all files in that bundle must be distributed together.
 % \end{macro}
 %
 % \begin{macro}[aux]{\@@_function_init:}
-%   Allow |<...>| to be used as markup for |\meta{...}|.  Clear various
-%   variables.
+%   Clear various variables.
 %    \begin{macrocode}
-\group_begin:
-  \char_set_catcode_active:N \<
-  \cs_new_protected:Npn \@@_function_init:
-    {
-      \coffin_clear:N \l_@@_descr_coffin
-      \box_gclear:N \g_@@_syntax_box
-      \coffin_clear:N \l_@@_syntax_coffin
-      \coffin_clear:N \l_@@_functions_coffin
-      \bool_set_false:N \l_@@_macro_TF_bool
-      \bool_set_false:N \l_@@_macro_pTF_bool
-      \bool_set_false:N \l_@@_macro_noTF_bool
-      \bool_set_false:N \l_@@_macro_EXP_bool
-      \bool_set_false:N \l_@@_macro_rEXP_bool
-      \bool_set_false:N \l_@@_no_label_bool
-      \bool_set_false:N \l_@@_names_verb_bool
-      \bool_set_true:N \l_@@_in_function_bool
-      \clist_clear:N \l_@@_function_label_clist
-      \tl_set:Nn \l_@@_override_module_tl { \q_no_value }
-      \char_set_catcode_active:N \<
-      \cs_set_protected_nopar:Npn < ##1 > { \meta {##1} }
-    }
-\group_end:
+\cs_new_protected:Npn \@@_function_init:
+  {
+    \coffin_clear:N \l_@@_descr_coffin
+    \box_gclear:N \g_@@_syntax_box
+    \coffin_clear:N \l_@@_syntax_coffin
+    \coffin_clear:N \l_@@_functions_coffin
+    \bool_set_false:N \l_@@_macro_TF_bool
+    \bool_set_false:N \l_@@_macro_pTF_bool
+    \bool_set_false:N \l_@@_macro_noTF_bool
+    \bool_set_false:N \l_@@_macro_EXP_bool
+    \bool_set_false:N \l_@@_macro_rEXP_bool
+    \bool_set_false:N \l_@@_no_label_bool
+    \bool_set_false:N \l_@@_names_verb_bool
+    \bool_set_true:N \l_@@_in_function_bool
+    \clist_clear:N \l_@@_function_label_clist
+    \tl_set:Nn \l_@@_override_module_tl { \q_no_value }
+    \char_set_active_eq:NN \< \@@_shorthand_meta:
+    \char_set_catcode_active:N \<
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[aux]{\@@_shorthand_meta:, \@@_shorthand_meta:w}
+%   Allow |<...>| to be used as markup for |\meta{...}|.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_shorthand_meta:
+  { \mode_if_math:TF { < } { \@@_shorthand_meta:w } }
+\cs_new_protected_nopar:Npn \@@_shorthand_meta:w #1 > { \meta {#1} }
 %    \end{macrocode}
 % \end{macro}
 %
