--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -933,7 +933,7 @@
 %   \end{texnote}
 % \end{function}
 %
-% \section{Additions to \pkg{l3tokens}}
+% \section{Additions to \pkg{l3token}}
 %
 % \begin{function}[TF, updated = 2012-12-20]{\peek_N_type:}
 %   \begin{syntax}
@@ -4058,7 +4058,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \subsection{Additions to \pkg{l3tokens}}
+% \subsection{Additions to \pkg{l3token}}
 %
 %    \begin{macrocode}
 %<@@=peek>
