Document internal \__char_generate:nn slightly more accurately
(And remove \exp_after:wN that hit a brace.)

--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1107,7 +1107,7 @@
 %   \cs{char_generate:nn} but omits various sanity tests. In particular, this
 %   means it is used in certain places where engine variations need to be
 %   accounted for by the kernel.  The \meta{catcode} must give an explicit
-%   integer after a single expansion.
+%   integer when expanded (and must not absorb a space for instance).
 % \end{function}
 %
 % \end{documentation}
@@ -1406,8 +1406,7 @@
   {
     \exp:w \exp_after:wN
       \@@_generate_aux:nnw \exp_after:wN
-        { \__int_value:w \__int_eval:w #1 \exp_after:wN }
-          {#2} \exp_end:
+        { \__int_value:w \__int_eval:w #1 } {#2} \exp_end:
   }
 %    \end{macrocode}
 %   Before doing any actual conversion, first some special case filtering.
