Let \protect to \string in line-wrapping code (fixes #340)
That follows LaTeX2e's \typeout rather than using \protected@edef, since
iow_wrap is meant for output to a terminal or log file (otherwise, why
wrap?), where preserving \protect is useless (contrarily to writing to
a file).

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -532,7 +532,7 @@
 %
 % \subsection{Wrapping lines in output}
 %
-% \begin{function}[added = 2012-06-28, updated = 2015-08-05]{\iow_wrap:nnnN}
+% \begin{function}[added = 2012-06-28, updated = 2017-07-17]{\iow_wrap:nnnN}
 %   \begin{syntax}
 %     \cs{iow_wrap:nnnN} \Arg{text} \Arg{run-on text} \Arg{set up} \meta{function}
 %   \end{syntax}
@@ -1918,7 +1918,6 @@
 % \end{macro}
 %
 % \begin{macro}{\iow_wrap:nnnN}
-% \begin{macro}[aux]{\@@_wrap_set:Nx}
 %   The main wrapping function works as follows.  First give |\\|,
 %   \verb*|\ | and other formatting commands the correct definition for
 %   messages and perform the given setup~|#3|.  The definition of
@@ -1942,16 +1941,14 @@
       #3
 %    \end{macrocode}
 %   Then fully-expand the input: in package mode, the expansion uses
-%   \LaTeXe{}'s \cs{protected} mechanism.  As soon as the expansion is
-%   done, reset \cs{iow_indent:n} to its error definition: it only works
-%   in the first argument of \cs{iow_wrap:nnnN}.
+%   \LaTeXe{}'s \tn{protect} mechanism in the same way as \tn{typeout}.
+%   In generic mode this setting is useless but harmless.  As soon as
+%   the expansion is done, reset \cs{iow_indent:n} to its error
+%   definition: it only works in the first argument of
+%   \cs{iow_wrap:nnnN}.
 %    \begin{macrocode}
-%<*initex>
+%<package>      \cs_set_eq:NN \protect \token_to_str:N
       \tl_set:Nx \l_@@_wrap_tl {#1}
-%</initex>
-%<*package>
-      \@@_wrap_set:Nx \l_@@_wrap_tl {#1}
-%</package>
       \cs_set_eq:NN \iow_indent:n \@@_indent_error:n
 %    \end{macrocode}
 %   Afterwards, set the newline marker (two assignments to fully expand,
@@ -1975,15 +1972,6 @@
     #4 { \tl_to_str:N \l_@@_wrap_tl }
   }
 %    \end{macrocode}
-%   As using the generic loader means that \cs{protected@edef} is
-%   not available, it's not placed directly in the wrap function but is set
-%   up as an auxiliary. In the generic loader this can then be redefined.
-%    \begin{macrocode}
-%<*package>
-\cs_new_eq:NN \@@_wrap_set:Nx \protected@edef
-%</package>
-%    \end{macrocode}
-% \end{macro}
 % \end{macro}
 %
 % \begin{macro}[aux]{\@@_wrap_do:, \@@_wrap_start:w}
