--- a/l3trial/l3auxdata/l3auxdata.dtx
+++ b/l3trial/l3auxdata/l3auxdata.dtx
@@ -675,7 +675,7 @@ Don't~ look~ here:~ check~ your~ console~ output!
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\usepackage{catchfile,l3regex}
+\usepackage{catchfile,expl3}
 %    \end{macrocode}
 %
 % \paragraph{Variables and variants}
@@ -728,7 +728,7 @@ Don't~ look~ here:~ check~ your~ console~ output!
 \prop_new:N \l_@@_catcodes_prop
 \cs_new:Nn \@@_catcodes_pushing:
   {
-    \__debug_patch_args:nNw { {##1} { (##2) } }
+    \__debug_patch_args:nNNpn { {##1} { (##2) } }
     \cs_set_protected:Npn \char_set_catcode:nn ##1 ##2
       {
         \prop_put:Nxx \l_@@_catcodes_prop
@@ -743,7 +743,7 @@ Don't~ look~ here:~ check~ your~ console~ output!
 %    \begin{macrocode}
 \cs_new:Nn \@@_catcodes_pop:
   {
-    \__debug_patch_args:nNw { {##1} { (##2) } }
+    \__debug_patch_args:nNNpn { {##1} { (##2) } }
     \cs_set_protected:Npn \char_set_catcode:nn ##1 ##2
       {
         \tex_catcode:D \int_eval:n {##1} = \__int_eval:w ##2 \__int_eval_end:
